<resources>
    <string name="app_name">Custom ListView with Volley</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="ranklabel">"Rank : "</string>
    <string name="countrylabel">"Country : "</string>
    <string name="populationlabel">"Population : "</string>

    <string name="email">Email address</string>
    <string name="password">*********</string>
    <string name="repassword">**********</string>
    <string name="name">Enter your name</string>
    <string name="mobile">Enter your mobile number</string>


    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_accept">Agree</string>
    <string name="btn_deny">Deny</string>
    <string name="btn_buy">Buyer</string>
    <string name="btn_sell">Seller</string>


    <string name="disclaimer">
        Stock recommendations and comments presented by the app wealth creator is solely based on our personal experience. Any buy or sell call generated by the app is based on technical charts only. We may or may not have position in the mention stocks.
        A trading idea can have big profit or small profit or small loss or big loss. With technical analysis we try to avoid the big loss using stop loss order. All trader or investor must follow the target and stop loss strictly.
        All investors are advised to conduct their own independent research into individual stocks before making a purchase or sell decision.
        By clicking agree button you accept the above terms and condition.
    </string>
</resources>
